--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,5 +1,3 @@
-
-
 .overall-header-section{
 display: flex;
 flex-direction: row;
@@ -8,15 +6,16 @@ padding-inline: 4rem;
 padding-block: 2rem;
 flex-wrap: wrap;
 align-items: center;
+background-color: var(--secondary-color);
 }
 .secondary-color{
-background-color: #39DB4A;
+ background-color:var(--primary-color);
 border-radius:4px;
 }
 .select-option{
 border: none;
 width: 1.5rem;
-color: #39DB4A;
+background-color:var(--primary-color);
 }
 .center-header ul{
 display: flex;
@@ -25,7 +24,7 @@ gap: .7rem;
 flex-wrap: wrap;
 }
 .button-header-contact{
- background-color: #39DB4A;  
+background-color:var(--primary-color); 
  width: max-content; 
  padding:.5rem;
  border-radius: 20px;
