--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -5,6 +5,15 @@ background-color: #FCFCFC;
 padding: 2rem;
 
 }
+@media screen and (max-width:55.625em) {
+.overall-hero-section{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    gap: 8rem;
+}
+}
 .left-hero{
 padding-inline: 5rem;
 }
